Moved AntiBuild into PaperPlugin